--- a/ml-basics/02 - Regression/ottr_solutions_notebooks/student/02_Regression_Solution_Ottr_Learner.ipynb
+++ b/ml-basics/02 - Regression/ottr_solutions_notebooks/student/02_Regression_Solution_Ottr_Learner.ipynb
@@ -146,11 +146,11 @@
                 "\n",
                 "### Remove outliers\n",
                 "\n",
-                "We are now set to begin writing some code ourselves. Let's begin by dealing with ouliers. An outlier is a data point that differs significantly from other observations.\n",
+                "We are now set to begin writing some code ourselves 🙂. Let's begin by dealing with ouliers. An outlier is a data point that differs significantly from other observations.\n",
                 "\n",
                 "**Question 1.**\n",
                 "\n",
-                "Starting with the `estate_data` dataset, `filter` to create a subset that contains observations where `price_per_unit` is less than `70`. \n"
+                "Starting with the `estate_data` dataset, `filter` to create a subset that contains observations where `price_per_unit` is less than `70`.\n"
             ]
         },
         {
@@ -161,16 +161,13 @@
             "source": [
                 "# Narrow down to observations whose price_per_unit is less than 70\n",
                 "estate_data <- estate_data %>% \n",
-                "  filter(price_per_unit < 70)\n"
+                "  ......\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -230,7 +227,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Much better! What can you say about the distribution of the price?\n",
+                "Much better 🤩! What can you say about the distribution of the price?\n",
                 "\n",
                 "### View numeric correlations\n",
                 "\n",
@@ -238,17 +235,15 @@
                 "\n",
                 "The *correlation* statistic, *r*, is a value between -1 and 1 that indicates the strength of a linear relationship.\n",
                 "\n",
-                "For the numeric features, we can create scatter plots that show the intersection of feature and label values.\n",
-                "\n",
+                "For numeric feature and label columns, we can create scatter plots that show the intersection of the feature and label values.\n",
                 "\n",
                 "**Question 2.**\n",
                 "\n",
-                "Starting with the `estate_data` dataset, in a piped sequence:\n",
-                "- `pivot_longer` the data (increase the number of rows and decrease the number of columns) such that all the existing column names except price_per_unit now fall under a new column name called **`features`** and their corresponding values under a new column name **`values`**\n",
+                "Starting with the `estate_data` dataset, in a piped sequence: - `pivot_longer` the data (increase the number of rows and decrease the number of columns) such that all the existing column names except price_per_unit, now fall under a new column name called **`features`** and their corresponding values under a new column name **`values`**\n",
                 "\n",
-                "- group the data by `features`\n",
+                "-   group the data by `features`\n",
                 "\n",
-                "- add a new column `corr_coef` which calculates the correlation between `values` and `price_per_unit` (hint: the function used for calculating correlation in R is `cor()`)  \n"
+                "-   add a new column `corr_coef` which calculates the correlation between `values` and `price_per_unit` (hint: the function used for calculating correlation in R is `cor()`)\n"
             ]
         },
         {
@@ -259,10 +254,14 @@
             "source": [
                 "# Pivot numeric features to a long format\n",
                 "numeric_features_long <- estate_data %>% \n",
-                "  pivot_longer(!price_per_unit, names_to = \"features\", values_to = \"values\") %>%\n",
-                "  group_by(features) %>% \n",
-                "  mutate(corr_coef = cor(values, price_per_unit),\n",
-                "         features = paste(features, ' vs price, r = ', round(corr_coef, 2), sep = '')) %>% \n",
+                "  pivot_....(!price_per_unit, names_to = \"____\", values_to = \"____\") %>%\n",
+                "  # Group by features\n",
+                "  ....(features) %>% \n",
+                "  # Calculate correlation coefficient between values and price_per_unit\n",
+                "  mutate(corr_coef = ____) %>% \n",
+                "  \n",
+                "  # Modifies the feature column to also include corr_coef\n",
+                "  mutate(features = paste(features, ' vs price, r = ', round(corr_coef, 2), sep = '')) %>% \n",
                 "  ungroup()\n",
                 "\n",
                 "# Print the first few rows of the data\n",
@@ -323,11 +322,11 @@
                 "\n",
                 "Starting with the `estate_data` dataset, in a piped sequence:\n",
                 "\n",
-                "- only keep columns `transaction_date`, `local_convenience_stores` and `price_per_unit`\n",
+                "-   only keep columns `transaction_date`, `local_convenience_stores` and `price_per_unit`\n",
                 "\n",
-                "- encode columns `transaction_date` and `local_convenience_stores` as categorical (factor)\n",
+                "-   encode columns `transaction_date` and `local_convenience_stores` as categorical (factor)\n",
                 "\n",
-                "- `pivot_longer` the data (increase the number of rows and decrease the number of columns) such that all the existing column names except price_per_unit now fall under a new column name called **`features`** and their corresponding values under a new column name **`values`**\n"
+                "-   `pivot_longer` the data (increase the number of rows and decrease the number of columns) such that all the existing column names except price_per_unit now fall under a new column name called **`features`** and their corresponding values under a new column name **`values`**\n"
             ]
         },
         {
@@ -338,10 +337,11 @@
             "source": [
                 "# Pivot categorical features to a long format\n",
                 "cat_features_long <- estate_data %>% \n",
-                "  select(transaction_date, local_convenience_stores, price_per_unit) %>% \n",
-                "  # Encode features from numeric to categorical\n",
-                "  mutate(across(c(transaction_date, local_convenience_stores), factor)) %>% \n",
-                "  pivot_longer(!price_per_unit, names_to = \"features\", values_to = \"values\") \n",
+                "  ____(transaction_date, ____, ____) %>% \n",
+                "  # Encode transaction_date & local_convenience_stores features\n",
+                "  # from numeric to categorical\n",
+                "  mutate(____) %>% \n",
+                "  pivot_longer(____) \n",
                 "\n",
                 "# Print some observations\n",
                 "cat_features_long %>% \n",
@@ -351,10 +351,7 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -404,14 +401,13 @@
                 "\n",
                 "Let's begin by splitting the data set such that some goes to training and some goes for validation. This enables us to evaluate how well the model performs in order to get a better estimate of how your models will perform on new data.\n",
                 "\n",
-                "\n",
                 "**Question 4.**\n",
                 "\n",
                 "In this section:\n",
                 "\n",
-                "- Make a split specification of `estate_data` such that `70%` goes to training and the rest goes to testing. Save this to a variable name `estate_split`\n",
+                "-   Make a split specification of `estate_data` such that `70%` goes to training and the rest goes to testing. Save this to a variable name `estate_split`\n",
                 "\n",
-                "- Extract the training and testing sets from `estate_split` and save them in `estate_train` and `estate_test` variable names respectively.\n"
+                "-   Extract the training and testing sets from `estate_split` and save them in `estate_train` and `estate_test` variable names respectively.\n"
             ]
         },
         {
@@ -428,11 +424,11 @@
                 "\n",
                 "# Split 70% of the data for training and the rest for tesing\n",
                 "estate_split <- estate_data %>% \n",
-                "  initial_split(prop = 0.7)\n",
+                "  initial_split(____)\n",
                 "\n",
-                "# Extract the data in each split\n",
-                "estate_train <- training(estate_split)\n",
-                "estate_test <- testing(estate_split)\n",
+                "# Extract the train and test data in each split\n",
+                "estate_train <- ____(estate_split)\n",
+                "estate_test <- ____(estate_split)\n",
                 "\n",
                 "# Print the number of observations in each split\n",
                 "cat(\"Training Set\", nrow(estate_train), \"rows\",\n",
@@ -442,10 +438,7 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -461,8 +454,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Great progress! Now let's train some models.\n",
-                "\n",
+                "Great progress 💪! Now let's train some models.\n",
                 "\n",
                 "## Train a regression model\n",
                 "\n",
@@ -490,14 +482,14 @@
             "outputs": [],
             "source": [
                 "# Create a preprocessing recipe\n",
-                "estate_recipe <- recipe(price_per_unit ~ ., data = estate_train) %>%\n",
-                "  # Specify the removal of a variable\n",
-                "  step_rm(transaction_date) %>% \n",
+                "estate_recipe <- ____(price_per_unit ~ ., data = estate_train) %>%\n",
+                "  # Specify the removal of transaction_date \n",
+                "  step_rm(____) %>% \n",
                 "  # Specify the encoding of local_convenience_stores as categorical\n",
                 "  step_mutate(\n",
-                "    local_convenience_stores = factor(local_convenience_stores)) %>%\n",
+                "    local_convenience_stores = ____) %>%\n",
                 "  # Specify the normalization of numeric features\n",
-                "  step_normalize(all_numeric_predictors())\n",
+                "  ____(all_numeric_predictors())\n",
                 " \n",
                 "# Print recipe\n",
                 "estate_recipe\n"
@@ -506,10 +498,7 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -540,17 +529,16 @@
             "source": [
                 "# Build a random forest model specification\n",
                 "rf_spec <- rand_forest() %>% \n",
-                "  set_engine('randomForest') %>% \n",
-                "  set_mode('regression')\n"
+                "  # Specify engine\n",
+                "  ____ %>%\n",
+                "  # Specify mode\n",
+                "  set_mode('____')\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -583,9 +571,10 @@
             "source": [
                 "# Create a workflow that bundles a recipe and model specification\n",
                 "rf_workflow <- workflow() %>% \n",
-                "  add_recipe(estate_recipe) %>% \n",
-                "  add_model(rf_spec)\n",
-                "\n",
+                "  # Add a recipe\n",
+                "  add_recipe(___) %>% \n",
+                "  # Add a model specification\n",
+                "  ____\n",
                 "# Print workflow\n",
                 "rf_workflow\n"
             ]
@@ -593,10 +582,7 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -637,14 +623,13 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "Excellent! So we now have a trained random forest model; but is it any good? Let's evaluate its performance! We'll do this by making predictions on the **test data** and then evaluate some performance metrics based on the actual outcomes. \n",
-                "\n",
+                "Excellent! So we now have a trained random forest model; but is it any good? Let's evaluate its performance! We'll do this by making predictions on the **test data** and then evaluate some performance metrics based on the actual outcomes.\n",
                 "\n",
                 "**Question 8.**\n",
                 "\n",
-                "- We'll evaluate the model performance based on the `rmse` and `rsq` metrics. Use the `metric_set()` function to combine these metric functions together into a new function, `eval_metrics`, that calculates all of them at once.\n",
+                "-   We'll evaluate the model performance based on the `rmse` and `rsq` metrics. Use the `metric_set()` function to combine these metric functions together into a new function, `eval_metrics`, that calculates all of them at once.\n",
                 "\n",
-                "- Generate predictions for the test data and then bind them to the test set. Rename the column containing predictions from `.pred` to `predictions`.\n"
+                "-   Generate predictions for the test data and then bind them to the test set. Rename the column containing predictions from `.pred` to `predictions`.\n"
             ]
         },
         {
@@ -654,22 +639,18 @@
             "outputs": [],
             "source": [
                 "# Create a metric set\n",
-                "eval_metrics <- metric_set(rmse, rsq)\n",
+                "eval_metrics <- ____(rmse, ____)\n",
                 "\n",
                 "\n",
                 "# Make and bind predictions to test data \n",
                 "results <- rf_workflow_fit %>% \n",
-                "  augment(new_data = estate_test) %>% \n",
-                "  rename(predictions = .pred)\n"
+                "  __________\n"
             ]
         },
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": [
-                "\n",
-                "\n"
-            ]
+            "source": "\n"
         },
         {
             "cell_type": "code",
@@ -727,10 +708,13 @@
                 "\n",
                 "Save your trained model, and then use it to predict the price-per-unit for the following real estate transactions:\n",
                 "\n",
+                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n",
                 "| **transaction_date** | **house_age** | **transit_distance** | **local_convenience_stores** | **latitude** | **longitude** |\n",
-                "|---------------------|----------------|--------------|--------|-------|------|\n",
+                "+======================+===============+======================+==============================+==============+===============+\n",
                 "| 2013.167             | 16.2          | 289.3248             | 5                            | 24.98203     | 121.54348     |\n",
-                "| 2013.000             | 13.6          | 4082.015             | 0                            | 24.94155     | 121.50381     |\n"
+                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n",
+                "| 2013.000             | 13.6          | 4082.015             | 0                            | 24.94155     | 121.50381     |\n",
+                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n"
             ]
         },
         {
@@ -801,15 +785,17 @@
             "source": [
                 "That's it for now. In this notebook, you:\n",
                 "\n",
-                "- Explored the data set to understand the relationships between the predictors and outcomes\n",
-                "- Preprocessed the data using recipes to make them easier for a model to use effectively.\n",
-                "- Made a random forest model specifcation.\n",
-                "- Bundles a recipe and model specification into a workflow.\n",
-                "- Trained a model.\n",
-                "- Made predictions on test set and evaluated the model performance.\n",
-                "- Saved the model, loaded it and then used it to predict labels for new data.\n",
+                "-   Explored the data set to understand the relationships between the predictors and outcomes\n",
+                "-   Preprocessed the data using recipes to make them easier for a model to use effectively.\n",
+                "-   Made a random forest model specifcation.\n",
+                "-   Bundles a recipe and model specification into a workflow.\n",
+                "-   Trained a model.\n",
+                "-   Made predictions on test set and evaluated the model performance.\n",
+                "-   Saved the model, loaded it and then used it to predict labels for new data.\n",
                 "\n",
-                "Fantastic job for coming this far! Feeling adventurous? Then, be sure to try out other regression models and tune some hyperparameters while at it.\n",
+                "Fantastic job for coming this far 👏! Feeling adventurous? Then, be sure to try out other regression models and tune some hyperparameters while at it.\n",
+                "\n",
+                "See you in our next module as we explore the realm of `classification` models!\n",
                 "\n",
                 "Happy Learning,\n",
                 "\n",
