--- a/ml-basics/02 - Regression/ottr_solutions_notebooks/student/02_Regression_Solution_Ottr_Learner.ipynb
+++ b/ml-basics/02 - Regression/ottr_solutions_notebooks/student/02_Regression_Solution_Ottr_Learner.ipynb
@@ -167,7 +167,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -272,7 +274,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -351,7 +355,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -438,7 +444,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -498,7 +506,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -538,7 +548,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -582,7 +594,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -650,7 +664,9 @@
         {
             "cell_type": "markdown",
             "metadata": {},
-            "source": "\n"
+            "source": [
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
@@ -708,13 +724,11 @@
                 "\n",
                 "Save your trained model, and then use it to predict the price-per-unit for the following real estate transactions:\n",
                 "\n",
-                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n",
                 "| **transaction_date** | **house_age** | **transit_distance** | **local_convenience_stores** | **latitude** | **longitude** |\n",
-                "+======================+===============+======================+==============================+==============+===============+\n",
+                "|----------------------|---------------|----------------------|------------------------------|--------------|---------------|\n",
                 "| 2013.167             | 16.2          | 289.3248             | 5                            | 24.98203     | 121.54348     |\n",
-                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n",
                 "| 2013.000             | 13.6          | 4082.015             | 0                            | 24.94155     | 121.50381     |\n",
-                "+----------------------+---------------+----------------------+------------------------------+--------------+---------------+\n"
+                "\n"
             ]
         },
         {
@@ -819,6 +833,7 @@
         "kernelspec": {
             "display_name": "R",
             "langauge": "R",
+            "language": "R",
             "name": "ir"
         },
         "language_info": {
